# utils_tools

./: LICENSE  README.md  body.json  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: api.py
app/api/v1/handlers/: __init__.py  files.py  files_handler.py  pdf.py
app/constants/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/domain/processor/: pdf_processor.py
app/interfaces/: __init__.py  file_processor.py
app/schemas/: __init__.py  files_schema.py  pdf.py  process_schema.py
app/services/: __init__.py  files_service.py  redis_service.py
app/utils/: __init__.py  file_utils.py
tests/utils/: test_file_util.py
