[tool.poetry]
name = "util-tools-api"
version = "0.1.0"
description = "API para manipular PDFs"
authors = ["Tu Nombre"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.19"
aiofiles = "^24.1.0"
setuptools = "^75.6.0"
redis = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true